# rs-gfatovcf

./: .gitignore  .gitmodules  Cargo.toml  README.md  bfs.txt  correct_run.txt  log.txt  new_run.txt  prova.txt  run.txt  test.txt  wrong_run.txt
.github/workflows/: rust.yml
input/: new_reference.fasta  new_reference.fasta.fai  prova.json  prova.vcf  samplePath3-bfs.json  samplePath3.vcf
src/: bubble_detection.rs  dfs.rs  file_io.rs  functions.rs  main.rs  snarl_detection.rs  variant_identification.rs
src/functions/: test.rs
