[package]
name = "gfa_to_vcf"
version = "0.1.0"
authors = ["Francesco Porto <francesco.porto97@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.5.0"
handlegraph = { path = "./dep/rs-handlegraph" }
gfa = { path = "./dep/rs-gfa" }

