[package]
name = "gfa_to_vcf"
version = "0.1.0"
authors = ["Francesco Porto <francesco.porto97@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.5.0"
clap = "2.33.1"
chrono = "0.4"
handlegraph = "0.2.0"
gfa = "0.2.3"
json = "0.12.4"
priority-queue = "1.0.0"
log = "0.4.11"

three-edge-connected = { git = "https://github.com/chfi/rs-3-edge" }
bstr = "0.2.13"



